manifests/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gassouma530975/testdeploy:backend-70129818282ad36e5bb259079061f5736149e058
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secret-volume
              mountPath: "/etc/secrets"
              readOnly: true
          resources:
            limits:
              memory: "256Mi" # Maximum memory allowed
              cpu: "100m" # Maximum CPU allowed (200 milliCPU)
            requests:
              memory: "128Mi" # Initial memory request
              cpu: "100m" # Initial CPU request

      volumes:
        - name: secret-volume
          secret:
            secretName: db-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: development
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: backend
